--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -3,7 +3,7 @@
 // ======================================
 
 // Universal Styles
- * {
+ body {
      font-family: $font-stack-primary;
      color: $light-grey;
  }
