--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,3 +20,48 @@ h1 {
   max-width: 700px;
   text-align: center;
 }
+
+body {
+  background-color: $white;
+  color: $dark-grey;
+}
+
+.dark-mode {
+  &-body {
+  background-color: $dark-mode-bg;
+  color: $white;
+  }
+  &-search {
+    background-color: $dark-grey;
+    color: $white;
+    border-color: $white;
+  }
+}
+
+#dark-mode {
+   width: 70px;
+   height: 70px;
+   z-index: 100;
+   background: url("../../img/lightbulb.png");
+   background-color: $white;
+   background-repeat: no-repeat;
+   background-size: 80%;
+   background-position: center;
+   border-radius: 50%;
+   box-shadow: 0 6px 10px 0 #666;
+   transition: all 0.1s ease-in-out;
+ 
+   font-size: 50px;
+   color: white;
+   text-align: center;
+   line-height: 70px;
+ 
+   position: fixed;
+   right: 50px;
+   bottom: 50px;
+}
+ 
+#dark-mode:hover {
+   box-shadow: 0 6px 14px 0 #666;
+   transform: scale(1.05);
+}
